--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,10 +13,10 @@
 			android:label="@string/app_name"
 			android:theme="@style/GdxTheme">
 		<activity
-				android:name="de.tfr.game.AndroidLauncher"
-				android:label="@string/app_name"
-				android:screenOrientation="portrait"
-				android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+                android:name="de.tfr.game.hotclack.AndroidLauncher"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
