--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
     ext {
-        kotlinVersion = '1.1.0-rc-91'
+        kotlinVersion = '1.1.0'
     }
 
     repositories {
         jcenter()
         mavenLocal()
         mavenCentral()
-        maven { url "https://dl.bintray.com/kotlin/kotlin-eap-1.1" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
@@ -20,7 +19,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = '1.0'
+    version = '0.1.3'
 
     ext {
         appName = "hotlack"
@@ -34,7 +33,6 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url "https://dl.bintray.com/kotlin/kotlin-eap-1.1" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
